--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "start": "node main.js",
+    "start": "node src/main.js",
     "test": ""
   },
   "repository": {
@@ -21,6 +21,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "mongodb": "^4.3.0",
     "node-fetch": "^3.1.0",
     "ws": "^8.4.0"
   },
