--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.2",
     "mongodb": "^4.3.0",
     "node-fetch": "^3.1.0",
+    "play-sound": "^1.1.5",
     "ws": "^8.4.0"
   },
   "devDependencies": {
